--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -345,7 +345,7 @@ or as pull requests to the source repository hosted at
 \end{center}
 I thank Arun Debray, Behzat Ergun, Richard Hughes, Robbie Rosati, 
 Ivan Tulli and Val Zakharevich for very helpful
-suggestions and corrections.
+suggestions, corrections and additions.
 
 You can join a Slack channel for the course (needs {\tt {@math.utexas.edu}} address)
 at
@@ -4106,10 +4106,12 @@ We have
 \end{equation}
 \end{thm}
 This implies in particular that $\int_X \hat A(X)$ is actually an integer, so
-e.g. for a spinnable $4$-manifold, $\int_X p_1(X)$ is a multiple of $24$.
-(Even more is true: if $X$ is a spinnable
+e.g. for a spinnable $4$-manifold, $\int_X p_1(X)$ is a multiple of $24$.\footnote{Even more is true: if $X$ is a spinnable
 manifold of dimension $8n+4$, $\int_X \hat A(X)$ is an \ti{even} integer,
-because \fixme{...})
+because in these dimensions $\dirac$ commutes with an additional
+conjugate-linear symmetry $j: SX \to SX$ with $j^2 = -1$, 
+i.e. $\dirac$ is $\bbH$-linear rather than merely
+$\C$-linear.}
 
 
 \subsection{Hodge theory}
